--- a/examples/config/relayd.conf.example.1
+++ b/examples/config/relayd.conf.example.1
@@ -3,20 +3,15 @@
         "UDP": {
             "port": "19090",
             "maxMsgSize": "65536",
-            "readBuffer": "16777216"
+            "readBuffer": "1000"
         },
         "TCP": {
             "port": "19091",
             "maxMsgSize": "65536",
-            "readBuffer": "16777216"
+            "readBuffer": "1000"
         }
     },
     "forwarders": {
-        "UDP": {
-            "server": "127.0.0.1",
-            "max_buffer_size": "100",
-            "port": "10001"
-        },
         "TCP": {
             "server": "127.0.0.1",
             "max_buffer_size": "100",
